[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/ui/buttonpressed.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/buttonhovered.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/badbutton.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/menubackgroundl.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/buttoncommingsoon.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/font.tres" type="DynamicFont" id=6]
[ext_resource path="res://scripts/menu.gd" type="Script" id=7]
[ext_resource path="res://scenes/CrownBuy.gd" type="Script" id=8]
[ext_resource path="res://assets/ui/uilolback.png" type="Texture" id=9]
[ext_resource path="res://scripts/GoBack.gd" type="Script" id=10]
[ext_resource path="res://assets/ui/badbuttonpressed.png" type="Texture" id=11]
[ext_resource path="res://assets/sprite/urkewalk.png" type="Texture" id=12]
[ext_resource path="res://assets/sprite/crowl.png" type="Texture" id=13]
[ext_resource path="res://assets/sprite/bitcoin.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/buttonhoveredgold.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "pressed",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "comming_soon",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=11]
font_path = "res://assets/fonts/VeniceClassic.ttf"

[sub_resource type="DynamicFont" id=12]
font_data = SubResource( 11 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "gold",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "pressed",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "redefault",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "redpressed",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "crown",
"speed": 5.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 505, 293 )
scale = Vector2( 10, 10 )
texture = ExtResource( 4 )

[node name="Soon" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -613.0
margin_top = -36.0
margin_right = -293.0
margin_bottom = 47.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 6 )
text = "SOON"
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Soon"]
show_behind_parent = true
scale = Vector2( 5, 5 )
frames = SubResource( 2 )
animation = "comming_soon"
playing = true
centered = false

[node name="Soon2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -613.0
margin_top = 107.0
margin_right = -293.0
margin_bottom = 190.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 6 )
text = "SOON"
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Soon2"]
show_behind_parent = true
scale = Vector2( 5, 5 )
frames = SubResource( 2 )
animation = "comming_soon"
playing = true
centered = false

[node name="Back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -648.0
margin_top = -373.0
margin_right = -328.0
margin_bottom = -290.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 6 )
text = "GO BACK"
flat = true
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="BitCoin" type="AnimatedSprite" parent="Back"]
position = Vector2( 1445.33, 44 )
scale = Vector2( 6.66667, 6.66667 )
frames = SubResource( 10 )

[node name="Label" type="Label" parent="Back/BitCoin"]
margin_left = 8.40001
margin_top = -6.8
margin_right = 48.4
margin_bottom = 7.2
custom_fonts/font = SubResource( 12 )
text = "0"

[node name="AnimatedSprite" type="AnimatedSprite" parent="Back"]
show_behind_parent = true
scale = Vector2( 5, 5 )
frames = SubResource( 4 )
animation = "redefault"
centered = false

[node name="PanelContainer2" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.99994
margin_top = -6.99997
margin_right = 7.00006
margin_bottom = 7.00003

[node name="Sprite2" type="Sprite" parent="PanelContainer2"]
position = Vector2( 0, 7 )
scale = Vector2( 3, 3 )
texture = ExtResource( 9 )

[node name="Sprite3" type="Sprite" parent="PanelContainer2"]
show_behind_parent = true
position = Vector2( 380, 7 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Hats" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -613.0
margin_top = -165.0
margin_right = -293.0
margin_bottom = -82.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 6 )
text = "HATS"
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Hats"]
show_behind_parent = true
scale = Vector2( 5, 5 )
frames = SubResource( 2 )
playing = true
centered = false

[node name="Crown" type="Button" parent="."]
margin_left = 225.0
margin_top = -48.0
margin_right = 413.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 6 )
text = "â €   CROWN"
flat = true
align = 2
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Crown"]
show_behind_parent = true
position = Vector2( -64, -10 )
scale = Vector2( 5, 5 )
frames = SubResource( 4 )
centered = false

[node name="Icon" type="AnimatedSprite" parent="Crown"]
position = Vector2( 6, 25 )
scale = Vector2( 6.9, 6.9 )
frames = SubResource( 8 )

[node name="PlayerDisplay" type="AnimatedSprite" parent="Crown"]
position = Vector2( 778, 341 )
scale = Vector2( 10, 10 )
frames = SubResource( 6 )
flip_h = true

[node name="HatsDisplay" type="AnimatedSprite" parent="Crown"]
position = Vector2( 778, 191 )
scale = Vector2( 10, 10 )
frames = SubResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true
zoom = Vector2( 1.3, 1.3 )

[connection signal="button_up" from="Back" to="Back" method="_on_Back_button_up"]
[connection signal="mouse_entered" from="Back" to="Back" method="_on_Back_mouse_entered"]
[connection signal="mouse_exited" from="Back" to="Back" method="_on_Back_mouse_exited"]
[connection signal="button_up" from="Crown" to="Crown" method="_on_Crown_button_up"]
